--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:27394",
-      "sslPort": 0
+      "sslPort": 44320
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "blazor_base": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
